2004-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/invoking.itely (Invoking lilypond): add SVG

	* stepmake/stepmake/metafont-rules.make: make single SVG/PFA/PFB
	rule.

	* configure.in (gui_b): bump mftrace requirement to 1.1.0

	* mf/feta-bolletjes.mf (triangle): add s to 0triangle.

	* mf/GNUmakefile (ALL_GEN_FILES): make SVG files too.

2004-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-svg.scm (dump-page): Implement landscape.

2004-12-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths): Add svg to search path.

	* scm/output-svg.scm:
	* scm/framework-svg.scm: Add pageSet.  Update.
	(dump-fonts): New function.
	(output-framework): Use it.

	* mf/GNUmakefile: 
	* buildscripts/gen-bigcheese-scripts.py: Also generate SVG font.

2004-12-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* tex/lilyponddefs.tex: comment out new ifpdf code.

2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: 
	* SConstruct (symlink): Replace afm by otf.

	* scm/framework-gnome.scm (gnome-main): Remove invocation of
	ly:pango-add-afm-decoder.

	* lily/lily-guile.cc ("ly:pango-add-afm-decoder"): Build fix: Remove.

2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (new-text): don't access t glyph for getting
	space dimension.

	* ly/init.ly: warn about \version

	* lily/lexer.ll: set version-seen?

2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-svg.scm (string->entities): Update.

2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (setup_paths): replace afm by otf for path. 

	* lily/pangofc-afm-decoder.cc: remove.

	* lily/include/pangofc-afm-decoder.hh: remove.

	* scm/framework-scm.scm (output-framework): new file.

	* mf/GNUmakefile: remove SAUTER_FONTS.
	remove SVG/sodipodi hacks.

	* scm/lily-library.scm (stderr): move stderr.

	* mf/GNUmakefile: remove AFM support.

	* buildscripts/mf-to-table.py (base): remove AFM support.
